fix(front): #2353.3 navbar children alignment
- Horizontally aligned dropdown children li
with parents

locally rendered changes:


Former-commit-id: 00c0defb66e8b447317fb8dbe8bbf04b602bbb8a

--- a/theme/2014/static/scss/menu.scss
+++ b/theme/2014/static/scss/menu.scss
@@ -192,9 +192,6 @@ $white: rgba(255, 255, 255, 1);
   }
 
   .has-sub {
-    a {
-      padding-right: 15px;
-    }
 
     &:hover {
       ul {
@@ -220,7 +217,6 @@ $white: rgba(255, 255, 255, 1);
 
   .sm-opened {
     display: none;
-    left: -20px;
     position: absolute;
 
     li {
